--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -21,6 +21,11 @@
                 View W2.A1 Data Flow Diagram Assignment (PDF)
             </a>
         </li>
+        <li>
+            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">
+                View The Business Analysis Core Concept Model (PowerPoint)
+            </a>
+        </li>
     </ul>
 </body>
 </html>
