--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -16,6 +16,11 @@
                 View Projects BIA620 (Word)
             </a>
         </li>
+        <li>
+            <a href="https://hbrose-bida.github.io/Master-Class-Projects/W2.A1%20Data%20Flow%20Diagram%20Assignment.pdf" target="_blank">
+                View W2.A1 Data Flow Diagram Assignment (PDF)
+            </a>
+        </li>
     </ul>
 </body>
 </html>
