--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -12,8 +12,8 @@
     <h2>Documents</h2>
     <ul>
         <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
-                View Projects BIA620 (Word)
+            <a href="https://hbrose-bida.github.io/Master-Class-Projects/W2.A1%20Data%20Flow%20Diagram%20Assignment.pdf" target="_blank">
+                View W2.A1 Data Flow Diagram Assignment (PDF)
             </a>
         </li>
     </ul>
