--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -1,26 +1,35 @@
-<!DOCTYPE html>
+# Function to generate the correct Microsoft Viewer link for Office files
+def format_office_link(file_name, github_url):
+    return f'<a href="https://view.officeapps.live.com/op/view.aspx?src={github_url}" target="_blank">{file_name}</a>'
+
+# Generate HTML content for Office files only
+html_office_content = """<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Class Projects</title>
+    <title>Master Class Projects - Office Files</title>
 </head>
 <body>
     <h1>Master Class Projects</h1>
-    <p>Welcome! This page provides access to key documents and projects.</p>
-
-    <h2>Documents</h2>
+    <p>This page provides access to Office documents.</p>
+    <h2>Office Files</h2>
     <ul>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
-                View Projects BIA620 (Word)
-            </a>
-        </li>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">
-                View The Business Analysis Core Concept Model (PowerPoint)
-            </a>
-        </li>
-    </ul>
+"""
+
+# Add links for each Office file
+for index, row in df_office.iterrows():
+    html_office_content += f"        <li>{format_office_link(row['File Name'], row['GitHub URL'])}</li>\n"
+
+# Close the HTML structure
+html_office_content += """    </ul>
 </body>
-</html>
+</html>"""
+
+# Save the HTML file
+html_office_file_path = "/mnt/data/ZZ_GitHub_Office_Files.html"
+with open(html_office_file_path, "w", encoding="utf-8") as f:
+    f.write(html_office_content)
+
+# Provide the file for download
+html_office_file_path
