--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -1,9 +1,4 @@
-# Function to generate the correct Microsoft Viewer link for Office files
-def format_office_link(file_name, github_url):
-    return f'<a href="https://view.officeapps.live.com/op/view.aspx?src={github_url}" target="_blank">{file_name}</a>'
-
-# Generate HTML content for Office files only
-html_office_content = """<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,21 +10,13 @@ html_office_content = """<!DOCTYPE html>
     <p>This page provides access to Office documents.</p>
     <h2>Office Files</h2>
     <ul>
-"""
-
-# Add links for each Office file
-for index, row in df_office.iterrows():
-    html_office_content += f"        <li>{format_office_link(row['File Name'], row['GitHub URL'])}</li>\n"
-
-# Close the HTML structure
-html_office_content += """    </ul>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/Projects%20BIA620.docx" target="_blank">Projects BIA620.docx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">The Business Analysis Core Concept Model.pptx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Notes.docx" target="_blank">W4.A1 Business Rules Metric Model Assignment - Notes.docx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Rev%202.docx" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.docx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W5.A1.%20AD%20&%20D%20Tech%20Requirements%20.docx" target="_blank">W5.A1. AD & D Tech Requirements .docx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W6.A1.%20The%20Balanced%20Scorecard%20.docx" target="_blank">W6.A1. The Balanced Scorecard .docx</a></li>
+        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W7.A1.%20From%20Concept%20to%20Reality%20.docx" target="_blank">W7.A1. From Concept to Reality .docx</a></li>
+    </ul>
 </body>
-</html>"""
-
-# Save the HTML file
-html_office_file_path = "/mnt/data/ZZ_GitHub_Office_Files.html"
-with open(html_office_file_path, "w", encoding="utf-8") as f:
-    f.write(html_office_content)
-
-# Provide the file for download
-html_office_file_path
+</html>
