--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Class Projects - Office Files</title>
+    <title>Master Class Projects</title>
 </head>
 <body>
     <h1>Master Class Projects</h1>
-    <p>This page provides access to Office documents.</p>
-    <h2>Office Files</h2>
+    <p>Welcome! This page provides access to key documents and projects.</p>
+
+    <h2>Documents</h2>
     <ul>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/Projects%20BIA620.docx" target="_blank">Projects BIA620.docx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">The Business Analysis Core Concept Model.pptx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Notes.docx" target="_blank">W4.A1 Business Rules Metric Model Assignment - Notes.docx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Rev%202.docx" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.docx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W5.A1.%20AD%20&%20D%20Tech%20Requirements%20.docx" target="_blank">W5.A1. AD & D Tech Requirements .docx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W6.A1.%20The%20Balanced%20Scorecard%20.docx" target="_blank">W6.A1. The Balanced Scorecard .docx</a></li>
-        <li><a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/blob/main/W7.A1.%20From%20Concept%20to%20Reality%20.docx" target="_blank">W7.A1. From Concept to Reality .docx</a></li>
+        <li>
+            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
+                View Projects BIA620 (Word)
+            </a>
+        </li>
     </ul>
 </body>
 </html>
