--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Class Projects</title>
+    <title>Master Class Projects - Office Files</title>
 </head>
 <body>
     <h1>Master Class Projects</h1>
-    <p>Welcome! This page provides access to key documents and projects.</p>
-
-    <h2>Documents</h2>
+    <p>This page provides access to Office documents.</p>
+    <h2>Office Files</h2>
     <ul>
         <li>
             <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
                 View Projects BIA620 (Word)
+            </a>
+        </li>
+        <li>
+            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">
+                View The Business Analysis Core Concept Model (PowerPoint)
             </a>
         </li>
     </ul>
