--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -7,19 +7,9 @@
 </head>
 <body>
     <h1>Master Class Projects</h1>
-    <p>This page provides access to Office documents.</p>
-    <h2>Office Files</h2>
+    <p>This page provides access to an Office document.</p>
+    <h2>Office File</h2>
     <ul>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
-                View Projects BIA620 (Word)
-            </a>
-        </li>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/The%20Business%20Analysis%20Core%20Concept%20Model.pptx" target="_blank">
-                View The Business Analysis Core Concept Model (PowerPoint)
-            </a>
-        </li>
         <li>
             <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Notes.docx" target="_blank">
                 View W4.A1 Business Rules Metric Model Assignment - Notes (Word)
