--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -25,6 +25,11 @@
                 View Projects BIA620 (Word)
             </a>
         </li>
+        <li>
+            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Notes.docx" target="_blank">
+                View W4.A1 Business Rules Metric Model Assignment - Notes (Word)
+            </a>
+        </li>
     </ul>
 </body>
 </html>
