--- a/ZZ_GitHub_pages.html
+++ b/ZZ_GitHub_pages.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master Class Projects - Office Files</title>
+    <title>Google Drive Files</title>
 </head>
 <body>
-    <h1>Master Class Projects</h1>
-    <p>This page provides access to Office documents.</p>
-    <h2>Office Files</h2>
+    <h2>Google Drive Files</h2>
     <ul>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Rev%202.docx" target="_blank">
-                View W4.A1 Business Rules Metric Model Assignment - Rev 2 (Word)
-            </a>
-        </li>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/W5.A1.%20AD%20and%20D%20Tech%20Requirements%20.docx" target="_blank">
-                View W5.A1. AD and D Tech Requirements (Word)
-            </a>
-        </li>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/Projects%20BIA620.docx" target="_blank">
-                View Projects BIA620 (Word)
-            </a>
-        </li>
-        <li>
-            <a href="https://view.officeapps.live.com/op/view.aspx?src=https://github.com/HBRose-BIDA/Master-Class-Projects/raw/main/W4.A1%20Business%20Rules%20Metric%20Model%20Assignment%20-%20Notes.docx" target="_blank">
-                View W4.A1 Business Rules Metric Model Assignment - Notes (Word)
-            </a>
-        </li>
+        <li><a href="https://drive.google.com/file/d/1ps7DgMKHTTDEDsw2Isb9qZwu7w8yfYnu/view?usp=sharing" target="_blank">Projects BIA620.docx</a></li>
+        <li><a href="https://drive.google.com/file/d/14gEnWxzACQdxpfu72hwDqJUEDLIs5afY/view?usp=sharing" target="_blank">The Business Analysis Core Concept Model.pptx</a></li>
+        <li><a href="https://drive.google.com/file/d/12MmLBP4lZCkAIOR7RGL3i8BaOkVQbl8f/view?usp=sharing" target="_blank">W2.A1 Data Flow Diagram Assignment.pdf</a></li>
+        <li><a href="https://drive.google.com/file/d/1QccCJnZ1Fi3czmbrwGaLP7850oXOjwgx/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Notes.docx</a></li>
+        <li><a href="https://drive.google.com/file/d/1GkSnAkZ_j67GkSTucU6elUpCft4O_jdk/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.docx</a></li>
+        <li><a href="https://drive.google.com/file/d/1LF_pmBGvzcL6BQ07LuXrkGiXe5iBZyWR/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.pdf</a></li>
+        <li><a href="https://drive.google.com/file/d/1RKU8gy_VuGXpFdMSoEXNYadSp5Dwp5ZI/view?usp=sharing" target="_blank">W5.A1. AD & D Tech Requirements .docx</a></li>
+        <li><a href="https://drive.google.com/file/d/1y5quX-4iPftGOhEUnBtVtCwFdQPAlbX8/view?usp=sharing" target="_blank">W6.A1. The Balanced Scorecard .docx</a></li>
+        <li><a href="https://drive.google.com/file/d/1VNZEmCzWxHUtdnHhN1aDf4KejWJfJZ91/view?usp=sharing" target="_blank">W7.A1. From Concept to Reality .docx</a></li>
     </ul>
 </body>
 </html>
