--- a/BIA-620.html
+++ b/BIA-620.html
@@ -6,15 +6,16 @@
 <body>
     <h2>Google Drive Files</h2>
     <ul>
-        <li><a href="https://drive.google.com/file/d/1ps7DgMKHTTDEDsw2Isb9qZwu7w8yfYnu/view?usp=sharing" target="_blank">Projects BIA620.docx</a></li>
-        <li><a href="https://drive.google.com/file/d/14gEnWxzACQdxpfu72hwDqJUEDLIs5afY/view?usp=sharing" target="_blank">The Business Analysis Core Concept Model.pptx</a></li>
-        <li><a href="https://drive.google.com/file/d/12MmLBP4lZCkAIOR7RGL3i8BaOkVQbl8f/view?usp=sharing" target="_blank">W2.A1 Data Flow Diagram Assignment.pdf</a></li>
-        <li><a href="https://drive.google.com/file/d/1QccCJnZ1Fi3czmbrwGaLP7850oXOjwgx/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Notes.docx</a></li>
-        <li><a href="https://drive.google.com/file/d/1GkSnAkZ_j67GkSTucU6elUpCft4O_jdk/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.docx</a></li>
-        <li><a href="https://drive.google.com/file/d/1LF_pmBGvzcL6BQ07LuXrkGiXe5iBZyWR/view?usp=sharing" target="_blank">W4.A1 Business Rules Metric Model Assignment - Rev 2.pdf</a></li>
-        <li><a href="https://drive.google.com/file/d/1RKU8gy_VuGXpFdMSoEXNYadSp5Dwp5ZI/view?usp=sharing" target="_blank">W5.A1. AD & D Tech Requirements .docx</a></li>
-        <li><a href="https://drive.google.com/file/d/1y5quX-4iPftGOhEUnBtVtCwFdQPAlbX8/view?usp=sharing" target="_blank">W6.A1. The Balanced Scorecard .docx</a></li>
-        <li><a href="https://drive.google.com/file/d/1VNZEmCzWxHUtdnHhN1aDf4KejWJfJZ91/view?usp=sharing" target="_blank">W7.A1. From Concept to Reality .docx</a></li>
+          <li><a href='https://drive.google.com/file/d/1j2Y-yA4JatEhDvd_JV0Ho504jim8CZH6/view'>Document discussing data flow and modeling concepts</a></li>
+          <li><a href='https://drive.google.com/file/d/1MH0Xalc5QGF9SjBYDOjZ2DClUKlX-0BV/view'>Document explaining the Balanced Scorecard framework</a></li>
+          <li><a href='https://drive.google.com/file/d/1oKZQK8beFQNJvu-eixktZt6_Hy14qiIm/view'>Project document outlining business analytics tasks</a></li>
+          <li><a href='https://drive.google.com/file/d/13B7LoKsgVIktMa9t0_Mdr-An6FvejrvH/view'>Loshins "Requirements Analysis PDF</a></li>
+          <li><a href='https://drive.google.com/file/d/1M_1BXuVoNfnAZuUnq5zzxRWrHBsbwtkP/view'>Loshins "Requirements Analysis</a></li>
+          <li><a href='https://drive.google.com/file/d/1ggF1-ilxposx8b6FiTl5vovnaBvIOIys/view'>Document outlining business rule metric models</a></li>
+          <li><a href='https://drive.google.com/file/d/17U8lG83V-L6eDmJHiOIFIVsw8ulMlUwT/view'>Data Flow Patient Check in</a></li>
+          <li><a href='https://drive.google.com/file/d/1k4jKeexH4bCMs7uuQRHYWfjfrx_PIPMO/view'>Presentation on business analysis core concepts</a></li>
+          <li><a href='https://drive.google.com/file/d/15KEw9f97yZ_WIIWXnaiNk7pnm5Ji_ZSv/view'>Document discussing data flow and modeling concepts</a></li>
+
     </ul>
 </body>
 </html>
