--- a/BIA-620.html
+++ b/BIA-620.html
@@ -23,14 +23,30 @@
         main {
             padding: 20px;
         }
+        .return-button {
+            display: inline-block;
+            margin: 10px 0;
+            padding: 10px 15px;
+            background-color: #0056b3; /* Blue button color */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        .return-button:hover {
+            background-color: #003d80; /* Darker blue on hover */
+        }
     </style>
 </head>
 <body>
     <header>
-        <img src="SMU-Logo_StackedHorizontalofM_FC_03_REV-WHT300.png" alt="SMU Logo">
+        <img src="https://raw.githubusercontent.com/HBRose-BIDA/Project-2/main/Code/Class%20HTML/HTML/SMU-Logo_StackedHorizontalofM_FC_03_REV-WHT300.png" alt="SMU Logo">
         <h1>BIA 620 Business Analytics</h1>
     </header>
     <main>
+        <!-- Return Button -->
+        <a href="https://github.com/HBRose-BIDA" class="return-button">Return to Personal Profile Repository</a>
+
         <h2>Class Papers and Projects</h2>
         <ul>
             <li><a href="https://drive.google.com/file/d/1j2Y-yA4JatEhDvd_JV0Ho504jim8CZH6/view">Document discussing data flow and modeling concepts</a></li>
