--- a/BIA-620.html
+++ b/BIA-620.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <img src="https://raw.githubusercontent.com/HBRose-BIDA/Project-2/main/Code/Class%20HTML/HTML/SMU-Logo_StackedHorizontalofM_FC_03_REV-WHT300.png" alt="SMU Logo">
+        <img src="https://raw.githubusercontent.com/HBRose-BIDA/Python/main/SMU-Logo_StackedHorizontalofM_FC_03_REV-WHT300.png" alt="SMU Logo">
         <h1>BIA 620 Business Analytics</h1>
     </header>
     <main>
