--- a/BIA-620.html
+++ b/BIA-620.html
@@ -45,7 +45,7 @@
     </header>
     <main>
         <!-- Return Button -->
-        <a href="https://github.com/HBRose-BIDA" class="return-button">Return to Personal Profile Repository</a>
+        <a href="javascript:history.back()" class="return-button">Return to Personal Profile Repository</a>
 
         <h2>Class Papers and Projects</h2>
         <ul>
